@@ -130,6 +130,16 @@ The module defines various constants.
   The assigned TCP port number (389) that LDAP servers listen on.
 \end{datadesc}
 
+\begin{datadesc}{SASL_AVAIL}
+  Boolean flag indicating whether python-ldap was built
+  with support for SASL (Cyrus-SASL).
+\end{datadesc}
+
+\begin{datadesc}{TLS_AVAIL}
+  Boolean flag indicating whether python-ldap was built
+  with support for SSL/TLS (OpenSSL).
+\end{datadesc}
+
 \subsubsection{Options}
 
 For use with functions and method set_option() and get_option() the
